Build project with JDK 8